# shaka-player-embedded

./: CMakeLists.txt
cmake/template/: Config.cmake.in
sample_xcode_project/sample_xcode_project/: CMakeLists.txt  ConfigTableViewController.m  Info.plist  LicenseTableViewController.m  PlayerViewController.m
shaka/tools/: version.py
